--- a/src/Gh/SimpleShopBundle/Resources/views/Index/index.html.twig
+++ b/src/Gh/SimpleShopBundle/Resources/views/Index/index.html.twig
@@ -1,4 +1,10 @@
 {% extends '::base.html.twig' %}
 {% block content %}
-    Hello World!
+    <ul>
+        {% for obj in objArray %}
+            <li>
+                {{ obj.name }}
+            </li>
+        {% endfor %}
+    </ul>
 {% endblock %}
