Return to Hello World in controller!

--- a/src/Gh/SimpleShopBundle/Resources/views/Index/index.html.twig
+++ b/src/Gh/SimpleShopBundle/Resources/views/Index/index.html.twig
@@ -1,10 +1,4 @@
 {% extends '::base.html.twig' %}
 {% block content %}
-    <ul>
-        {% for obj in objArray %}
-            <li>
-                {{ obj.name }}
-            </li>
-        {% endfor %}
-    </ul>
+    Hello World!
 {% endblock %}
